Update existing tests to be better